Fix facet/nav dropdown overlap (update Faceter)

--- a/casualties/facetedsearch.css
+++ b/casualties/facetedsearch.css
@@ -42,10 +42,6 @@ table.casualty-table tr:nth-child(even) {
   z-index: 999;
 }
 
-.facet-wrapper button {
-  z-index: 9999;
-}
-
 @media (max-width: 1199px) {
   .animate-facet .facet-input-container {
     width: 100%;
